@@ -738,8 +738,12 @@ gpointer launch_player(gpointer data)
 //        watch_in_hup_id = g_io_add_watch(channel_in, G_IO_ERR | G_IO_HUP, thread_complete, NULL);
 
         g_idle_add(set_play, NULL);
+#ifdef GLIB2_14_ENABLED
+		g_timeout_add_seconds(1,thread_query, threaddata);
+#else
         g_timeout_add(1000, thread_query, threaddata);
-
+#endif
+		
     } else {
         state = QUIT;
         printf("Spawn failed for filename %s\n", threaddata->filename);
