@@ -1,4 +1,5 @@
 Development
+	When using glib 2.14 or higher use more effiencient timeout method, results in lower X usage
 	Move menubar out of pane
 	Reenable -quiet option when running mplayer, drops gnome-mplayer cpu usage 
 	If title from get_metadata is 0 bytes long, then use the file name
